syntax = "proto3";

package message;

option java_package = "com.proto.message";
option java_multiple_files = true;

message Message {
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    string result= 1;
}

service GreetService {
    rpc Greet(GreetRequest) returns (GreetResponse) {};
}